https://gitlab.com/kdg-ti/software-architecture/teams-25-26/ruben-rania/restaurant-service/-/issues/1
[US1] implemented + all tests work with it now